--- a/blocktest.html
+++ b/blocktest.html
@@ -16,7 +16,7 @@
   <script defer src="js/settings.js"></script>
   <script defer src="js/topmenu.js"></script>
 
-  <script src="js/customblock.js"></script>
+  <script src="js/customblock_shadow.js"></script>
 
   <style>
     :root {
