--- a/blocks.html
+++ b/blocks.html
@@ -16,105 +16,15 @@
   <script defer src="js/settings.js"></script>
   <script defer src="js/topmenu.js"></script>
 
-  <script src="js/customblock.js"></script>
+  <script src="js/customblock_shadow.js"></script>
 
   <style>
-    :root {
-      --blocksize: 2.5em;
-    }
 
     bl-ock {
-      position: relative;
-      --half: calc(var(--blocksize) / 2);
-      --margins: calc(var(--blocksize) /9);
-      --rot: 0deg;
-      width: var(--blocksize);
-      height: var(--blocksize);
-      display: inline-block;
-      margin: var(--margins);
-      transform: rotate(var(--rot));
-      transition: all 0.5s;
-      border: solid 1px var(--tranared);
-
-
-      .layer {
-        opacity: 0;
-        transition: all 1s;
-      }
-
-      &[data-state="0"] .layer[data-rot="0"],
-      &[data-state="1"] .layer[data-rot="1"],
-      &[data-state="2"] .layer[data-rot="2"],
-      &[data-state="3"] .layer[data-rot="3"] {
-        opacity: 1
-      }
-
-      & div.wedge {
-        position: absolute;
-        width: 0;
-        height: 0;
-        border-top: var(--half) solid var(--color);
-        border-left: var(--half) solid transparent;
-        border-right: 0;
-        border-bottom: 0;
-        display: inline-block;
-        pointer-events: none;
-      }
-
-      .part_1 {
-        transform: rotate(0);
-        left: 0;
-        top: 0;
-      }
-
-      .part_2 {
-        transform: rotate(-90deg);
-        left: var(--half);
-        top: 0;
-      }
-
-      .part_3 {
-        transform: rotate(90deg);
-        top: 0;
-        left: var(--half);
-      }
-
-      .part_4 {
-        transform: rotate(0);
-        top: var(--half);
-        left: var(--half);
-      }
-
-
-      .part_5 {
-        transform: rotate(180deg);
-        top: var(--half);
-        left: var(--half);
-      }
-
-
-      .part_6 {
-        transform: rotate(90deg);
-        top: var(--half);
-        left: 0;
-      }
-
-
-      .part_7 {
-        transform: rotate(-90deg);
-        top: var(--half);
-        left: 0;
-      }
-
-
-      .part_8 {
-        transform: rotate(180deg);
-        top: 0;
-        left: 0;
-      }
-
-
+      --blocksize: 2.5em;
+      --bordercolor: var(--tranared);
     }
+
 
     #tileholder,
     #playfield {
@@ -126,8 +36,6 @@
     }
 
     #playfield {
-
-      /* --blocksize: 4em; */
       --gridsize: 8;
 
       --playsize: min(calc(var(--gridsize)* 4em), min(92vw, 92vh));
@@ -145,6 +53,9 @@
         display: inline-block;
 
         bl-ock {
+          /* needs to be re-declared
+          due to shadow DOM */
+          --blocksize: calc(var(--playsize) / var(--gridsize));
           margin: 0;
           position: absolute;
 
@@ -174,7 +85,7 @@
     <div><input type="checkbox" class="slider" id="darkmode" /><label class="button" for="darkmode">Dark mode</label></div>
 
     <div><select id="alltiles">
-				<option value="all">All tiles (64)</option>
+        <option value="all">All tiles (64)</option>
         <option value="36">Random 36</option>
         <option value="rogue">More! (70)</option>
 
@@ -194,10 +105,10 @@
 
     // MAXIMIZED ALL BLOCKS
     let allblocks = "1 12 123 1234 12345 123456 12346 1235 12356 1236 124 1245 12456 1246 13 134 1345 13456 1345678 134578 1346 135 1356 135678 13578 136 14 145 1456 146 15 156 2 23 234 2345 23456 234567 2345678 23457 234578 2346 234678 235 2356 23567 235678 2357 23578 236 23678 24 245 2456 24567 245678 2457 24578 246 2467 24678 25 256 26";
-		
+
     // not included, according to https://www.jaapsch.net/puzzles/izzi.htm
     // 1357 2468 2367 1256 12345678 0
-		
+
     // let defaultblocks = "1368, 13457, 26, 23, 34578, 138, 12368, 367, 1, 1358, 23467, 13458, 23578, 2568, 123456, 124568, 12578, 245678, 12568, 12, 234567, 1257, 246, 13, 234, 1236, 1267, 467, 1234, 1567, 8, 27, 123, 134, 12348, 157";
     let defaultblocks = "1 12 123 1234 123456 12348 12356 1236 12368 124568 12568 1257 12578 1267 13 134 13457 13458 1358 1368 138 145 1567 157 2 23 234 234567 23467 23578 245 245678 246 2568 26 27"; // minified default blocks
 
@@ -231,8 +142,8 @@
           return defaultblocks.split(" ");
         case "all":
           return allblocks.split(" ");
-				case "rogue":
-					return (allblocks + "1357 2468 2367 1256 12345678 ").split(" ");
+        case "rogue":
+          return (allblocks + "1357 2468 2367 1256 12345678 ").split(" ");
         case "36":
           return ashuffle(allblocks.split(" ")).slice(0, 36);
       }
@@ -320,7 +231,7 @@
         // randomize rotation on first load
         // MUST be done AFTER appending to the DOM, since dataset is only available after it is added
         tile.dataset.state = Math.floor(Math.random() * 4);
-   
+
 
 
         tile.setAttribute("draggable", true);
