--- a/blocks.html
+++ b/blocks.html
@@ -16,7 +16,7 @@
   <script defer src="js/settings.js"></script>
   <script defer src="js/topmenu.js"></script>
 
-  <script src="js/customblock_shadow.js"></script>
+  <script src="js/customblock_shadow.js?v=2"></script>
 
   <style>
     bl-ock {
