--- a/blocks_about.html
+++ b/blocks_about.html
@@ -80,7 +80,7 @@
 
     <div>A <a href="blocks.html">pattern-matching game</a> has square tiles that are radially divided into 8 segments. Each segment can be black or white. The varying distribution of the black/white segments create the tile patterns. (The game involves aligning the tiles so that the touching sides have matching patterns. But that's a talk for a later time.)</div>
 
-    <div><strike>The original game comes with</strike> When I encountered the game, the box had 36 tiles which, when placed in perfect arrangement, produces a 6 x 6 grid of tiles.</div>
+    <div><del>The original game comes with</del> <ins>When I encountered the game,the box had</ins> 36 tiles which, when placed in perfect arrangement, produces a 6 x 6 grid of tiles.</div>
 
     <h3>Query:</h3>
     <div>Are there only 36 possible tile patterns? Are there other patterns not included in the original set?</div>
