--- a/colortouch.html
+++ b/colortouch.html
@@ -157,14 +157,14 @@
     <div class="ct_point wedge right white"></div>
     </div>
     `;
-    targets.innerHTML = `
+   /* targets.innerHTML = `
     <div class="inline">
     <div class="ct_point triangle blue"></div>
     <div class="ct_point circle red"></div>
     <div class="ct_point square green"></div>
     </div>
     `;
-
+*/
     let instruct = document.createElement("div");
     instruct.id = "ct_instruct";
     document.querySelector("#colortouch").append(targets, instruct);
