--- a/colortouch.html
+++ b/colortouch.html
@@ -149,12 +149,12 @@
     targets.id = "ct_targets";
     targets.innerHTML = `
     <div class="inline">
-    <div class="ct_point triangle left blue"></div>
-    <div class="ct_point circle right red"></div>
+    <div class="ct_point left blue"></div>
+    <div class="ct_point right red"></div>
     </div>
     <div class="inline updown">
-    <div class="ct_point square left yellow"></div>
-    <div class="ct_point wedge right white"></div>
+    <div class="ct_point left yellow"></div>
+    <div class="ct_point right white"></div>
     </div>
     `;
    /* targets.innerHTML = `
