--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ Contents:
       <li><a href="#spotmatch">Spot the Match</a></li>
       <li><a href="#slaptap">Slap Tap</a></li>
       <li><a href="#fistbump">Closed, Open, Flat</a></li>
+      <li><a href="#colortouch">Color Touch</a></li>
     </ul>
 
     <hr />
@@ -277,6 +278,17 @@ Contents:
         <li>TODO: make printable</li>
       </ul>
 
+    </div>
+
+    <h3 id="colortouch"><a href="colortouch.html">Color Touch</a></h3>
+    <div>
+      <ul>
+        <li>Touch matching large reference targets and the smaller task targets simultaneously with your index finger of both hands.</li>
+        <li>Match either the color or the direction.</li>
+        <li>Say the color name or the direction of the triangles as you go.</li>
+        <li>Alternate reference/task fingers with each touch.</li>
+        <li>Printable chart! Layout will be optimized when printing.</li>
+      </ul>
     </div>
     <hr />
     <br />
