--- a/colortouch.html
+++ b/colortouch.html
@@ -16,67 +16,76 @@
   <script defer src="js/settings.js"></script>
   <script defer src="js/topmenu.js"></script>
 
-</head>
-
-<body>
-
-  <div id="ctrlbar">
-    <div><a href="index.html"><img id="homeicon" src="img/home.svg" alt="home" /></a></div>
-
-    <div><input type="checkbox" class="slider" id="darkmode" checked="true" /><label for="darkmode">Dark mode</label></div>
-
-    <button id="reload">Reload</button>
-
-  </div>
-
-  <div id="colortouch"></div>
-
-  <svg xmlns="http://www.w3.org/2000/svg">
-    <path d="M150 5 L75 200 L225 200 Z"
-    style="fill:none;stroke:green;stroke-width:3" />
-  </svg> 
-
-
-
-<svg class="icon  icon--plus" viewBox="0 0 5 5" xmlns="http://www.w3.org/2000/svg">
-  <path d="M2 1 h1 v1 h1 v1 h-1 v1 h-1 v-1 h-1 v-1 h1 z" />
-</svg>
-
-
-<svg class="icon  icon--plus" viewBox="0 0 4 1.5" xmlns="http://www.w3.org/2000/svg">
-  <path d="M0 1.5 l2 -1.5 l2 1.5 z" />
-</svg>
-
-
-
 
   <style>
-    .icon {
-    display: inline-block;
-    vertical-align: middle;
-    width: 5em;
-}
-
-.icon--plus {
-    background-color: none;
-}
-
-.icon--plus > path {
-    fill: red;
-    stroke: gold;
-    stroke-width: 0.1;
-    stroke-linejoin: round;
-}
-
     :root {
-      --pointsize: 2em;
+      --pointsize: 4em;
     }
 
-    .ct_point {
-      width: 0;
-      height: 0;
-      display: inline-block;
+    #ct_targets {
+      --pointsize: 4em;
+      text-align: center;
+      margin: calc(var(--pointsize)/2);
+
+      .icon {
+        height: 2in;
+        width: auto;
+        margin: 0.05in;
+      }
+
+      margin-top: 0.15in;
+      margin-bottom:0.5in;
+
+      .updown {
+        margin-left: calc(var(--pointsize)/1.5);
+        transform: rotate(90deg);
+      }
+
+      .inline {
+        display: inline-block;
+      }
+
+      /* .ct_point.wedge {
+        margin: calc(var(--pointsize)/2) calc(var(--pointsize)/-2.25);
+
+      } */
+    }
+
+    .chars {
+      font-size: 100pt;
+    }
+
+    #ct_instruct {
+      display: grid;
+      grid-template-columns: repeat(10, 1fr);
       position: relative;
+      grid-row-gap: calc(var(--pointsize) /2);
+      justify-items: center;
+
+      .icon {
+        width: var(--pointsize);
+        height: var(--pointsize);
+      }
+
+    }
+
+    .icon {
+      display: inline-block;
+      vertical-align: middle;
+      height: var(--pointsize);
+      width: var(--pointsize);
+      /* background-color: cornflowerblue; */
+
+      --ctcolor: red;
+
+      path,
+      circle {
+        fill: var(--ctcolor);
+        stroke: var(--fg);
+        stroke-width: 0.1;
+        stroke-linejoin: round;
+
+      }
 
       &.red {
         --ctcolor: red;
@@ -98,126 +107,161 @@
         --ctcolor: green;
       }
 
-      &.wedge {
-        border-top: 0;
-        border-left: var(--pointsize) transparent;
-        border-right: var(--pointsize) transparent;
-        border-bottom: var(--pointsize) var(--ctcolor);
-        border-style: solid;
-        margin: calc(var(--pointsize)/1.5) 1em;
-
-        &.left {
-          transform: rotate(-90deg);
-        }
-
-        &.right {
-          transform: rotate(90deg);
-        }
-
-        &.down {
-          transform: rotate(180deg);
-        }
-
-        &.up {
-          transform: rotate(0deg);
-        }
-
+      &.left {
+        transform: rotate(0deg);
       }
 
-
-      &.triangle {
-        border-top: 0;
-        border-left: var(--pointsize) transparent;
-        border-right: var(--pointsize) transparent;
-        border-bottom: var(--pointsize) var(--ctcolor);
-        border-bottom: calc(var(--pointsize)*1.5) var(--ctcolor);
-        border-style: solid;
+      &.right {
+        transform: rotate(180deg);
       }
 
-      &.circle {
-        width: calc(var(--pointsize)*1.5);
-        height: calc(var(--pointsize)*1.5);
-        background-color: var(--ctcolor);
-        border-radius: 100%;
+      &.down {
+        transform: rotate(-90deg);
       }
 
-      &.square {
-        width: calc(var(--pointsize)*1.5);
-        height: calc(var(--pointsize)*1.5);
-        background-color: var(--ctcolor);
-      }
-
-    }
-
-    #ct_targets {
-      --pointsize: 4em;
-      text-align: center;
-      margin: calc(var(--pointsize)/2);
-
-      .updown {
-        margin-left: calc(var(--pointsize)/1.5);
+      &.up {
         transform: rotate(90deg);
       }
 
-      .inline {
-        display: inline-block;
-      }
-
-      .ct_point.wedge {
-        margin: calc(var(--pointsize)/2) calc(var(--pointsize)/-2.25);
-
-      }
     }
-    .chars {
-      font-size: 100pt;
+
+
+    @media print {
+      .icon {
+
+        path,
+        circle {
+          stroke: black;
+          stroke-width: 0.1;
+        }
+      }
+
+      /* .print { */
+      /* body {
+        width: 11in;
+        height: 8.5in;
+        border: 1px red solid;
+        position: relative; */
+
+
+      /* #ct_targets {
+          .icon {
+            height: 1.5in;
+          }
+
+          margin-top: 0.15in;
+          margin-bottom:0.5in;
+        } */
+
+
+      #ct_instruct {
+        display: grid;
+        grid-template-columns: repeat(10, 1fr);
+        position: relative;
+        grid-row-gap: 0.15in;
+        justify-items: center;
+
+        .icon {
+          width: 0.8in;
+          height: 0.8in;
+        }
+      }
+
+      /* } */
     }
   </style>
+</head>
+
+<body class="print">
+
+  <div id="ctrlbar">
+    <div><a href="index.html"><img id="homeicon" src="img/home.svg" alt="home" /></a></div>
+
+    <div><input type="checkbox" class="slider" id="darkmode" checked="true" /><label for="darkmode">Dark mode</label></div>
+
+    <button id="reload">Reload</button>
+
+  </div>
+
+  <div id="colortouch"></div>
+
 
   <script>
+    function svgpath({ viewBox = "0 0 2.2 2.2", path, cls } = {}) {
+      let svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
+      svg.setAttribute("viewBox", viewBox);
+      let thepath = document.createElementNS('http://www.w3.org/2000/svg', 'path');
+      thepath.setAttribute("d", "M0.1 0.1 " + path);
+      svg.appendChild(thepath);
+      svg.classList.add("icon");
+      if (cls) svg.classList.add(...cls.split(" "));
+      return svg;
+    }
 
-    // layout:
-    // 10x 4 rows of small shapes
-    // remainder up top for large shapes
+    function svgcircle({ cls } = {}) {
+      let svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
+      svg.setAttribute("viewBox", "0 0 2.2 2.2");
+      let c = document.createElementNS('http://www.w3.org/2000/svg', 'circle');
+      c.setAttribute("cx", 1.1);
+      c.setAttribute("cy", 1.1);
+      c.setAttribute("r", 1);
+      svg.appendChild(c);
+      svg.classList.add("icon");
+      if (cls) svg.classList.add(...cls.split(" "));
+      return svg;
+      // document.body.append(svg);
+    }
 
-    let colors = ("red blue yellow white" || "red green blue").split(" ");
+    function shape(s, cls) {
+      switch (s) {
+        case "left":
+        case "right":
+        case "up":
+        case "down":
+        case "wedge":
+          return svgpath({ viewBox: "0 0 2.2 4.2", path: "m2 0 l-2 2 l2 2 z", cls: cls + " " + s });
+          break;
+        case "circle": return svgcircle({ cls: cls + " " + s });
+          break;
+        case "square":
+          return svgpath({ path: "m0 0 h2 v2 h-2 z", cls: cls + " " + s });
+          break;
+        case "triangle":
+          return svgpath({ path: "m0 2 l1 -2 l1 2 z", cls: cls + " " + s });
+          break;
+      }
+    }
 
-    let shps = "■ ▲ ● ◸"; // &#9632; &#9650; &#9679; &#9700;
+    // document.body.append(shape("square", "blue"), shape("circle"), shape("triangle", "yellow"));
 
-  
+    let colors = ("red blue green white" || "red green blue").split(" ");
+
     let shapes = ("left right up down" || "circle square wedge").split(" ");
 
     let targets = document.createElement("div");
     targets.id = "ct_targets";
-    targets.innerHTML = `
-    <div class="inline">
-    <div class="ct_point wedge left blue"></div>
-    <div class="ct_point wedge right red"></div>
-    </div>
-    <div class="inline updown">
-    <div class="ct_point wedge left yellow"></div>
-    <div class="ct_point wedge right white"></div>
-    </div>
-    `;
-   /* targets.innerHTML = `
-    <div class="inline">
-    <div class="ct_point triangle blue"></div>
-    <div class="ct_point circle red"></div>
-    <div class="ct_point square green"></div>
-    </div>
-    `;
-*/
+    let left = document.createElement("div");
+    left.className = "inline";
+    left.append(shape("left", "green"), shape("right", "blue"));
+    let right = document.createElement("div");
+    right.className = "inline updown";
+    right.append(shape("left", "red"), shape("right", "white"));
+
+    targets.append(left, right);
+
     let instruct = document.createElement("div");
     instruct.id = "ct_instruct";
     document.querySelector("#colortouch").append(targets, instruct);
 
 
     for (let x = 0; x < 40; x++) {
-      let point = document.createElement("div");
-      point.className = "ct_point wedge " + randarray(colors) + " " + randarray(shapes);
+      // let point = document.createElement("div");
+      // point.className = "icon wedge " + randarray(colors) + " " + randarray(shapes);
       // point.className = "chars";      point.innerText = randarray(shps.split(" "));
-      instruct.append(point);
-    }
+      // .className = "icon wedge " + randarray(colors) + " " + randarray(shapes);
 
+      instruct.append(shape(randarray(shapes), randarray(colors)));
+    }
 
     document.querySelector("#reload").onclick = function (e) {
       showchart();
@@ -226,9 +270,19 @@
 
     // TODO : Make this printable
 
+
+    /* targets.innerHTML = `
+     <div class="inline">
+     <div class="ct_point triangle blue"></div>
+     <div class="ct_point circle red"></div>
+     <div class="ct_point square green"></div>
+     </div>
+     `;
+ */
+
   </script>
-  <style>
-  </style>
+
+  <!-- <svg class="icon" viewBox="0 0 3 3" xmlns="http://www.w3.org/2000/svg"><path d="M1 0 h1 v1 h1 v1 h-1 v1 h-1 v-1 h-1 v-1 h1 z" /></svg> -->
 
 
 </body>
