--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
     <hr />
 Contents:
     <ul>
-      <li><a href="#cp">CP Saccades / Space Fixator / Red-Green delete</a></li>
-      <li><a href="#hart">Hart Chart / Decoding</a></li>
-      <li><a href="#tracking">Letter Tracking</a></li>
+      <li><a href="#cp">CP Saccades / Space Fixator / Red-Green delete</a> (printable)</li>
+      <li><a href="#hart">Hart Chart / Decoding</a> (printable)</li>
+      <li><a href="#tracking">Letter Tracking</a> (printable)</li>
       <li><a href="#glyphs">Tranaglyphs / Fusion cards</a></li>
       <li><a href="#lines">Line counting</a></li>
       <li><a href="#blocks">Pattern Blocks</a></li>
       <li><a href="#spotmatch">Spot the Match</a></li>
-      <li><a href="#slaptap">Slap Tap</a></li>
-      <li><a href="#fistbump">Closed, Open, Flat</a></li>
-      <li><a href="#colortouch">Color Touch</a></li>
+      <li><a href="#slaptap">Slap Tap</a> (printable)</li>
+      <li><a href="#fistbump">Closed, Open, Flat</a> (printable)</li>
+      <li><a href="#colortouch">Color Touch</a> (printable)</li>
     </ul>
 
     <hr />
@@ -148,6 +148,7 @@ Contents:
             <li>If hints are enabled then the corresponding row/column is highlighted when hovering over each code item.</li>
           </ul>
         </li>
+        <li>Printable chart! Layout will be optimized when printing.</li>
       </ul>
     </div>
 
@@ -170,6 +171,7 @@ Contents:
         </li>
         <li>"Level 2" option mixes capital and lowercase letters.</li>
         <li>Use red/green glasses with "Red" mode.</li>
+        <li>Printable chart! Layout will be optimized when printing.</li>
       </ul>
     </div>
 
@@ -257,7 +259,7 @@ Contents:
         <li>Adjust complexity by setting the Level via the dropdown menu.</li>
         <li>Works best on a desktop browser (wide screen)</li>
         <li>Toggle Color mode for added complexity (say the color name as you slap/tap).</li>
-        <li>TODO: make printable</li>
+        <li>Printable chart! Layout will be optimized when printing.</li>
       </ul>
 
     </div>
@@ -275,7 +277,7 @@ Contents:
           </ul>
         </li>
         <li>Toggle Color mode for added complexity (say the color name as you go).</li>
-        <li>TODO: make printable</li>
+        <li>Printable chart! Layout will be optimized when printing.</li>
       </ul>
 
     </div>
