--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
     <h2>Vision Therapy exercises</h2>
     <div class="plain">
       These tools and mini-games are designed for use under guidance from a vision therapist. Some of the tools are modeled after existing games, and can be played as regular games.<br/><br/>
-      Please visit the project's <a href="https://github.com/visiontherapy/visiontherapy.github.io">GitHub repository</a> to view the code, contribute, or provide feedback. (See <a href="https://github.com/visiontherapy/visiontherapy.github.io/issues">current issues</a> under active consideration.)
+      Please visit the project's <a href="https://github.com/visiontherapy/visiontherapy.github.io">GitHub repository</a> to view the code, contribute, or provide feedback.<br/>
+      (See <a href="https://github.com/visiontherapy/visiontherapy.github.io/issues">current issues</a> under active consideration.)
      
     </div>
     <hr />
