--- a/fistbump.html
+++ b/fistbump.html
@@ -131,9 +131,8 @@ https://gamedevelopment.tutsplus.com/picking-a-color-palette-for-your-games-artw
 
     let colormode = document.querySelector("#colormode");
 
-    colormode.onclick = () => {
-      showchart();
-    };
+    colormode.onclick = showchart; 
+    
 
     showchart();
 
