Add shape/arrow chart

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ Contents:
     <ul>
       <li><a href="#cp">CP Saccades / Space Fixator / Red-Green delete</a> (printable)</li>
       <li><a href="#hart">Hart Chart / Decoding</a> (printable)</li>
+      <li><a href="#shapes">Shape/Arrow chart</a> (printable)</li>
       <li><a href="#tracking">Letter Tracking</a> (printable)</li>
       <li><a href="#glyphs">Tranaglyphs / Fusion cards</a></li>
       <li><a href="#lines">Line counting</a></li>
@@ -152,6 +153,17 @@ Contents:
         <li>Printable chart! Layout will be optimized when printing.</li>
       </ul>
     </div>
+
+
+    <h3 id="shapes"><a href="shapechart.html">Shape/Arrow chart</a></h3>
+    <div>
+      <ul>
+        <li>Toggle between 8x8 grid of shapes or 6x6 grid of arrows</li>
+        <li>Printable chart! Layout will be optimized when printing.</li>
+      </ul>
+    </div>
+    
+
 
     <h3 id="tracking"><a href="lettertracking.html">Letter Tracking</a></h3>
     <div>
