-webkit-print-color-adjust

--- a/fistbump.html
+++ b/fistbump.html
@@ -101,6 +101,7 @@ https://gamedevelopment.tutsplus.com/picking-a-color-palette-for-your-games-artw
       }
 
       .bumpthing::after {
+        -webkit-print-color-adjust: exact !important;
         print-color-adjust: exact !important;
       }
     }
