--- a/lettersearch.html
+++ b/lettersearch.html
@@ -148,6 +148,9 @@
 
       <div>Scale <input id="fontslider" type="range" min="0.5" max="2" value="1" step="0.1" /> <span id="fontscale"></span></div>
 
+	<div>
+	
+	</div>
 
     </div>
   </div>
@@ -197,58 +200,49 @@ let markers = {
 	};
 
 let chosen = ["ucaps","alphanums"];
+
+
 function showchart() {
-sac.innerHTML = "";
+	sac.innerHTML = "";
+	let placedmarks = [];
 
-let marks = [];
-chosen.forEach( n => {
-marks.push(...markers[n]);
-});
-//"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz".split(""); //
+	for (let choice of chosen) {
+		for (let mark of markers[choice]) {
+			let m = document.createElement("div");
+			m.innerText = mark;
+			m.className = "mark";
+			m.dataset.mark = mark;
+			sac.append(m);
 
-let placedmarks = [];
-
-for (let mark of marks) {
-let m = document.createElement("div");
-m.innerText = mark;
-m.className = "mark";
-m.dataset.mark = mark;
-sac.append(m);
-
-placerandom(m);
-
-}
-
-function placerandom(m,counter=0) {
-m.style.left= minmax(0,95) + "%";
-m.style.top= minmax(0,90) + "%";
-let b = m.getBoundingClientRect();
-for (let p of placedmarks) {
-if (!(b.right < p.left  ||
-	b.left > p.right ||
-	b.bottom < p.top ||
-	b.top > p.bottom)
-	//console.log("no overlap, continue");	
-	//} else if (
-	&&
-	(isbetween(b.left, p.left, p.right) || isbetween(b.right,p.left,p.right)) &&
-	(isbetween(b.top,p.top,p.bottom) || isbetween(b.bottom,p.top,p.bottom))
-	){
-	//console.log(m);
-	if (counter<50) {
-	placerandom(m,++counter);
-	return;
-	}
-	m.style.color="red";
+			placerandom(m);
+		}
 	}
 
-}
-	placedmarks.push({left:b.left,right:b.right,top:b.top,bottom:b.bottom});
-
-}
-
-//console.log(placedmarks);
-
+	function placerandom(m,counter=0) {
+		m.style.left= minmax(0,95) + "%";
+		m.style.top= minmax(0,90) + "%";
+		let b = m.getBoundingClientRect();
+		for (let p of placedmarks) {
+			if (!(b.right < p.left  ||
+				b.left > p.right ||
+				b.bottom < p.top ||
+				b.top > p.bottom)
+				//console.log("no overlap, continue");	
+				//} else if (
+				&&
+				(isbetween(b.left, p.left, p.right) || isbetween(b.right,p.left,p.right))
+				&&
+				(isbetween(b.top,p.top,p.bottom) || isbetween(b.bottom,p.top,p.bottom))
+				) {
+				if (counter<50) {
+					placerandom(m,++counter);
+					return;
+				}
+				m.style.color="red";
+			}
+		}
+		placedmarks.push({left:b.left,right:b.right,top:b.top,bottom:b.bottom});
+	}
 }
 
 showchart();
