--- a/tranaglyphs.html
+++ b/tranaglyphs.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,6 +26,24 @@
       --glyphsize: calc(var(--basesize) * var(--glyphscale));
     }
 
+
+[data-theme="light"] {
+--tranagreen: #11eeee;
+--tranared: #eebb11;
+#circles #green {
+	mix-blend-mode: darken;
+}
+}
+
+[data-theme="dark"] {
+--tranagreen: #008;
+--tranared: #500;
+#circles #green {
+	mix-blend-mode: difference;
+}
+}
+
+
     body {
       text-align: center;
     }
@@ -41,9 +60,6 @@
       --delta: 0;
       --units: 1cm;
 
-      * {
-        mix-blend-mode: difference;
-      }
     }
 
 
